[gd_scene load_steps=4 format=2]

[ext_resource path="res://sound_manager/module/internal_scripts/SoundManager.gd" type="Script" id=1]
[ext_resource path="res://sound_manager/module/internal_scripts/Sounds.gd" type="Script" id=2]

[sub_resource type="AudioStreamSample" id=1]
loop_mode = 1

[node name="SoundManager" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="BGM" type="AudioStreamPlayer" parent="."]

[node name="BackgroundSounds" type="Node" parent="."]

[node name="BGS0" type="AudioStreamPlayer" parent="BackgroundSounds"]
stream = SubResource( 1 )
script = ExtResource( 2 )

[node name="MusicEffects" type="Node" parent="."]

[node name="ME0" type="AudioStreamPlayer" parent="MusicEffects"]
script = ExtResource( 2 )

[node name="SoundEffects" type="Node" parent="."]

[node name="SE0" type="AudioStreamPlayer" parent="SoundEffects"]
script = ExtResource( 2 )
